# shaker-mid-market-app

./: .env.example  .gitignore  README.md  launch.sh  pyproject.toml  utils.py  worker-start.sh  worker.py
app/api/: dependencies.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: rates.py  users.py
app/core/: celery_app.py  config.py  security.py
app/crud/: __init__.py  base.py  crud_conversion.py  crud_user.py
app/db/: base.py  enum.py  init_db.py  session.py
app/exceptions/: internal.py
app/models/: __init__.py  conversion.py  user.py
app/schemas/: __init__.py  conversion.py  internal.py  user.py
app/services/: base.py  currencies.py  rates.py
app/tests/: conftest.py
app/tests/api/api_v1/: test_rates.py  test_users.py
app/tests/crud/: test_conversion.py  test_user.py
app/tests/utils/: conversion.py  user.py  utils.py
scraper/: collectors.py  headers.py  parser.py
